# steeleagle-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: delivery.dsl  patrol.dsl  search_and_rescue.dsl  takeoff_land.dsl
nl2dsl/: __init__.py  catalog.py  catalog_data.json  cli.py  compiler.py  config.py  llm.py  pipeline.py  prompt.py  validator.py
tests/: test_catalog_sync.py  test_pipeline.py
tools/: eval_real_llm.py  gen_catalog.py
